// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<div
  class="za-input za-input-text"
>
  <input
    autocomplete="off"
    type="text"
  />
</div>
`;

exports[`Input renders correctly if type isn't valid 1`] = `
<div
  class="za-input za-input-xxx"
>
  <input
    autocomplete="off"
    type="xxx"
  />
</div>
`;

exports[`Input renders correctly if type=text and props includes rows 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    rows="1"
  />
</div>
`;

exports[`Input renders onClear called correctly 1`] = `
<Input
  clearable={true}
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "My new value",
        ],
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onClear={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  type="text"
  value=""
>
  <InputBase
    clearable={true}
    disabled={false}
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            "My new value",
          ],
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onClear={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    prefixCls="za-input"
    type="text"
    value=""
  >
    <div
      className="za-input za-input-text clearable"
    >
      <input
        autoComplete="off"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCompositionUpdate={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <Icon
        className="za-input-clear"
        onClick={[Function]}
        prefixCls="za-icon"
        type="wrong-round-fill"
      >
        <i
          className="za-icon za-input-clear za-icon-wrong-round-fill"
          onClick={[Function]}
        />
      </Icon>
    </div>
  </InputBase>
</Input>
`;

exports[`Input showLength 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    maxlength="100"
    rows="4"
  />
  <div
    class="za-input-length"
  >
    0/100
  </div>
</div>
`;

exports[`Input.Idcard renders correctly 1`] = `
<Input
  type="idcard"
>
  <InputNumber
    clearable={true}
    disabled={false}
    prefixCls="za-input"
    type="idcard"
  >
    <div
      className="za-input za-input-number"
      onClick={[Function]}
    >
      <div
        className="za-input-placeholder"
      />
      <div
        className="za-input-content"
      />
      <input
        disabled={false}
        type="hidden"
        value=""
      />
      <KeyboardPicker
        onKeyClick={[Function]}
        prefixCls="za-keyboard"
        type="idcard"
        visible={false}
      >
        <Popup
          mask={false}
          visible={false}
        >
          <Portal
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            handlePortalUnmount={[Function]}
            mask={false}
            maskType="normal"
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <Keyboard
                  onKeyClick={[Function]}
                  prefixCls="za-keyboard"
                  type="idcard"
                  visible={false}
                >
                  <div
                    className="za-keyboard"
                    onClick={[Function]}
                  >
                    <div
                      className="za-keyboard-keys"
                    >
                      <div
                        className="za-keyboard-item"
                        key="0"
                        onClick={[Function]}
                      >
                        1
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="1"
                        onClick={[Function]}
                      >
                        2
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="2"
                        onClick={[Function]}
                      >
                        3
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="3"
                        onClick={[Function]}
                      >
                        4
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="4"
                        onClick={[Function]}
                      >
                        5
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="5"
                        onClick={[Function]}
                      >
                        6
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="6"
                        onClick={[Function]}
                      >
                        7
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="7"
                        onClick={[Function]}
                      >
                        8
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="8"
                        onClick={[Function]}
                      >
                        9
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="9"
                        onClick={[Function]}
                      >
                        x
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="10"
                        onClick={[Function]}
                      >
                        0
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="11"
                        onClick={[Function]}
                      >
                        <Icon
                          prefixCls="za-icon"
                          type="keyboard"
                        >
                          <i
                            className="za-icon za-icon-keyboard"
                          />
                        </Icon>
                      </div>
                    </div>
                    <div
                      className="za-keyboard-handle"
                    >
                      <div
                        className="za-keyboard-item"
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                      >
                        <Icon
                          prefixCls="za-icon"
                          type="deletekey"
                        >
                          <i
                            className="za-icon za-icon-deletekey"
                          />
                        </Icon>
                      </div>
                      <div
                        className="za-keyboard-item za-keyboard-item-ok"
                        onClick={[Function]}
                      >
                        确定
                      </div>
                    </div>
                  </div>
                </Keyboard>
              </div>
            </div>
          </Portal>
        </Popup>
      </KeyboardPicker>
    </div>
  </InputNumber>
</Input>
`;

exports[`Input.Number renders correctly 1`] = `
<Input
  type="number"
>
  <InputNumber
    clearable={true}
    disabled={false}
    prefixCls="za-input"
    type="number"
  >
    <div
      className="za-input za-input-number"
      onClick={[Function]}
    >
      <div
        className="za-input-placeholder"
      />
      <div
        className="za-input-content"
      />
      <input
        disabled={false}
        type="hidden"
        value=""
      />
      <KeyboardPicker
        onKeyClick={[Function]}
        prefixCls="za-keyboard"
        type="number"
        visible={false}
      >
        <Popup
          mask={false}
          visible={false}
        >
          <Portal
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            handlePortalUnmount={[Function]}
            mask={false}
            maskType="normal"
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <Keyboard
                  onKeyClick={[Function]}
                  prefixCls="za-keyboard"
                  type="number"
                  visible={false}
                >
                  <div
                    className="za-keyboard"
                    onClick={[Function]}
                  >
                    <div
                      className="za-keyboard-keys"
                    >
                      <div
                        className="za-keyboard-item"
                        key="0"
                        onClick={[Function]}
                      >
                        1
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="1"
                        onClick={[Function]}
                      >
                        2
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="2"
                        onClick={[Function]}
                      >
                        3
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="3"
                        onClick={[Function]}
                      >
                        4
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="4"
                        onClick={[Function]}
                      >
                        5
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="5"
                        onClick={[Function]}
                      >
                        6
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="6"
                        onClick={[Function]}
                      >
                        7
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="7"
                        onClick={[Function]}
                      >
                        8
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="8"
                        onClick={[Function]}
                      >
                        9
                      </div>
                      <div
                        className="za-keyboard-item za-keyboard-item-disabled"
                        key="9"
                        onClick={[Function]}
                      />
                      <div
                        className="za-keyboard-item"
                        key="10"
                        onClick={[Function]}
                      >
                        0
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="11"
                        onClick={[Function]}
                      >
                        <Icon
                          prefixCls="za-icon"
                          type="keyboard"
                        >
                          <i
                            className="za-icon za-icon-keyboard"
                          />
                        </Icon>
                      </div>
                    </div>
                    <div
                      className="za-keyboard-handle"
                    >
                      <div
                        className="za-keyboard-item"
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                      >
                        <Icon
                          prefixCls="za-icon"
                          type="deletekey"
                        >
                          <i
                            className="za-icon za-icon-deletekey"
                          />
                        </Icon>
                      </div>
                      <div
                        className="za-keyboard-item za-keyboard-item-ok"
                        onClick={[Function]}
                      >
                        确定
                      </div>
                    </div>
                  </div>
                </Keyboard>
              </div>
            </div>
          </Portal>
        </Popup>
      </KeyboardPicker>
    </div>
  </InputNumber>
</Input>
`;

exports[`Input.Number renders onClear called correctly 1`] = `
<Input
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onClear={
    [MockFunction] {
      "calls": Array [
        Array [
          "",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  type="number"
  value=""
>
  <InputNumber
    clearable={true}
    disabled={false}
    onChange={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    onClear={
      [MockFunction] {
        "calls": Array [
          Array [
            "",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    prefixCls="za-input"
    type="number"
    value=""
  >
    <div
      className="za-input za-input-number focus clearable"
      onClick={[Function]}
    >
      <div
        className="za-input-placeholder"
      />
      <div
        className="za-input-content"
      />
      <input
        disabled={false}
        type="hidden"
        value=""
      />
      <KeyboardPicker
        onKeyClick={[Function]}
        prefixCls="za-keyboard"
        type="number"
        visible={true}
      >
        <Popup
          mask={false}
          visible={true}
        >
          <Portal
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            handlePortalUnmount={[Function]}
            mask={false}
            maskType="normal"
            prefixCls="za-popup"
            stayTime={3000}
            visible={true}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <Keyboard
                  onKeyClick={[Function]}
                  prefixCls="za-keyboard"
                  type="number"
                  visible={true}
                >
                  <div
                    className="za-keyboard"
                    onClick={[Function]}
                  >
                    <div
                      className="za-keyboard-keys"
                    >
                      <div
                        className="za-keyboard-item"
                        key="0"
                        onClick={[Function]}
                      >
                        1
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="1"
                        onClick={[Function]}
                      >
                        2
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="2"
                        onClick={[Function]}
                      >
                        3
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="3"
                        onClick={[Function]}
                      >
                        4
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="4"
                        onClick={[Function]}
                      >
                        5
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="5"
                        onClick={[Function]}
                      >
                        6
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="6"
                        onClick={[Function]}
                      >
                        7
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="7"
                        onClick={[Function]}
                      >
                        8
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="8"
                        onClick={[Function]}
                      >
                        9
                      </div>
                      <div
                        className="za-keyboard-item za-keyboard-item-disabled"
                        key="9"
                        onClick={[Function]}
                      />
                      <div
                        className="za-keyboard-item"
                        key="10"
                        onClick={[Function]}
                      >
                        0
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="11"
                        onClick={[Function]}
                      >
                        <Icon
                          prefixCls="za-icon"
                          type="keyboard"
                        >
                          <i
                            className="za-icon za-icon-keyboard"
                          />
                        </Icon>
                      </div>
                    </div>
                    <div
                      className="za-keyboard-handle"
                    >
                      <div
                        className="za-keyboard-item"
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                      >
                        <Icon
                          prefixCls="za-icon"
                          type="deletekey"
                        >
                          <i
                            className="za-icon za-icon-deletekey"
                          />
                        </Icon>
                      </div>
                      <div
                        className="za-keyboard-item za-keyboard-item-ok"
                        onClick={[Function]}
                      >
                        确定
                      </div>
                    </div>
                  </div>
                </Keyboard>
              </div>
            </div>
          </Portal>
        </Popup>
      </KeyboardPicker>
      <Icon
        className="za-input-clear"
        onClick={[Function]}
        prefixCls="za-icon"
        type="wrong-round-fill"
      >
        <i
          className="za-icon za-input-clear za-icon-wrong-round-fill"
          onClick={[Function]}
        />
      </Icon>
    </div>
  </InputNumber>
</Input>
`;

exports[`Input.Price renders correctly 1`] = `
<Input
  type="price"
>
  <InputNumber
    clearable={true}
    disabled={false}
    prefixCls="za-input"
    type="price"
  >
    <div
      className="za-input za-input-number"
      onClick={[Function]}
    >
      <div
        className="za-input-placeholder"
      />
      <div
        className="za-input-content"
      />
      <input
        disabled={false}
        type="hidden"
        value=""
      />
      <KeyboardPicker
        onKeyClick={[Function]}
        prefixCls="za-keyboard"
        type="price"
        visible={false}
      >
        <Popup
          mask={false}
          visible={false}
        >
          <Portal
            animationDuration={200}
            autoClose={false}
            direction="bottom"
            handlePortalUnmount={[Function]}
            mask={false}
            maskType="normal"
            prefixCls="za-popup"
            stayTime={3000}
            visible={false}
          >
            <div
              className="za-popup za-popup-hidden"
            >
              <div
                className="za-popup-wrapper za-popup-wrapper-bottom"
                style={
                  Object {
                    "WebkitTransitionDuration": "200ms",
                    "transitionDuration": "200ms",
                  }
                }
              >
                <Keyboard
                  onKeyClick={[Function]}
                  prefixCls="za-keyboard"
                  type="price"
                  visible={false}
                >
                  <div
                    className="za-keyboard"
                    onClick={[Function]}
                  >
                    <div
                      className="za-keyboard-keys"
                    >
                      <div
                        className="za-keyboard-item"
                        key="0"
                        onClick={[Function]}
                      >
                        1
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="1"
                        onClick={[Function]}
                      >
                        2
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="2"
                        onClick={[Function]}
                      >
                        3
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="3"
                        onClick={[Function]}
                      >
                        4
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="4"
                        onClick={[Function]}
                      >
                        5
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="5"
                        onClick={[Function]}
                      >
                        6
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="6"
                        onClick={[Function]}
                      >
                        7
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="7"
                        onClick={[Function]}
                      >
                        8
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="8"
                        onClick={[Function]}
                      >
                        9
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="9"
                        onClick={[Function]}
                      >
                        .
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="10"
                        onClick={[Function]}
                      >
                        0
                      </div>
                      <div
                        className="za-keyboard-item"
                        key="11"
                        onClick={[Function]}
                      >
                        <Icon
                          prefixCls="za-icon"
                          type="keyboard"
                        >
                          <i
                            className="za-icon za-icon-keyboard"
                          />
                        </Icon>
                      </div>
                    </div>
                    <div
                      className="za-keyboard-handle"
                    >
                      <div
                        className="za-keyboard-item"
                        onTouchEnd={[Function]}
                        onTouchStart={[Function]}
                      >
                        <Icon
                          prefixCls="za-icon"
                          type="deletekey"
                        >
                          <i
                            className="za-icon za-icon-deletekey"
                          />
                        </Icon>
                      </div>
                      <div
                        className="za-keyboard-item za-keyboard-item-ok"
                        onClick={[Function]}
                      >
                        确定
                      </div>
                    </div>
                  </div>
                </Keyboard>
              </div>
            </div>
          </Portal>
        </Popup>
      </KeyboardPicker>
    </div>
  </InputNumber>
</Input>
`;

exports[`Input.Textarea autoHeight 1`] = `
<Input
  autoHeight={true}
  onChange={[MockFunction]}
  rows={4}
  type="text"
  value="foo"
>
  <InputTextarea
    autoHeight={true}
    disabled={false}
    focused={false}
    onChange={[MockFunction]}
    prefixCls="za-input"
    rows={4}
    showLength={false}
    type="text"
    value="foo"
  >
    <div
      className="za-input za-input-textarea"
    >
      <textarea
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCompositionUpdate={[Function]}
        onFocus={[Function]}
        rows={4}
        value="foo"
      />
    </div>
  </InputTextarea>
</Input>
`;

exports[`Input.Textarea renders correctly 1`] = `
<div
  class="za-input za-input-textarea"
>
  <textarea
    rows="4"
  />
</div>
`;
